--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
+    "markdown-it": "^14.1.0",
     "mongoose": "^9.1.5",
     "next": "16.1.4",
     "react": "19.2.3",
